# scpi-client

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  test.txt
.github/workflows/: ci.yml
examples/: k2000.rs
src/: acquire.rs  analog.rs  burst.rs  data.rs  digital.rs  general.rs  generator.rs  lib.rs  socket.rs  trigger.rs
